--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "W6Libs"
-version = "0.0.7"
+name = "w6-libs"
+version = "0.0.1"
 description = "W6 Library"
 authors = ["Irawan <irawan@waresix.com>"]
 license = "MIT"
 repository = "https://github.com/irawanahak/w6-libs"
 readme = "README.md"
-keywords = ["W6Libs"]
+keywords = ["w6libs"]
 classifiers = [
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
@@ -14,7 +14,7 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
 ]
-packages = [{include = "W6Libs"}]
+packages = [{include = "w6libs"}]
 
 [tool.poetry.dependencies]
 python = "^3.6"
