--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "w6-libs"
-version = "0.0.1"
+version = "0.0.2"
 description = "W6 Library"
 authors = ["Irawan <irawan@waresix.com>"]
 license = "MIT"
@@ -18,6 +18,7 @@ packages = [{include = "w6libs"}]
 
 [tool.poetry.dependencies]
 python = "^3.6"
+typing-extensions = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
